Time: 2 ms (99.58%) | Memory: 44.9 MB (25.89%) - LeetSync